# minesweeper

./: Cargo.toml  README.md
board_plugin/: Cargo.toml
board_plugin/src/: bounds.rs  events.rs  lib.rs
board_plugin/src/components/: bomb.rs  bomb_neighbor.rs  coordinates.rs  game_over_cover.rs  mod.rs  pause_cover.rs  uncover.rs
board_plugin/src/resources/: board.rs  board_assets.rs  board_options.rs  mod.rs  tile.rs  tile_map.rs
board_plugin/src/systems/: input.rs  mark.rs  uncover.rs
src/: main.rs
