[package]
name = "minesweeper"
version = "0.1.0"
edition = "2021"

[features]
default = []
debug = [ "board_plugin/debug", "bevy-inspector-egui" ]

[dependencies]
bevy = "0.14.2"
board_plugin = { path = "board_plugin"}

# Hierarchy inspector debug
bevy-inspector-egui = { version = "0.26.0", optional = true }

[workspace]
members = [
    "board_plugin"
]

# Enable optimizations for dependencies (including Bevy), but not for the code:
[profile.dev.package."*"]
opt-level = 3

# Enable small optimizations for the code:
[profile.dev]
opt-level = 1
