[package]
name = "board_plugin"
version = "0.1.0"
edition = "2021"

[features]
default = []
debug = ["colored", "bevy-inspector-egui"]

[dependencies]
#Engine
bevy = "0.14.2"

#Serialization
serde = "1.0.210"

# Random
rand = "0.8.5"

#Console Debug
colored = { version = "2.1.0", optional = true }
#Hierarchy inspector debug
bevy-inspector-egui = { version = "0.26.0", optional = true}

